# math-genealogy

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  jack.tex  juniper.gv  juniper.tex  main.py  main.tex  pyproject.toml  stammbaum.py
.github/workflows/: test.yaml
examples/: .gitignore  Makefile  juniper.py
math_genealogy/: __init__.py  graph.py  load.py  parse.py  scrape.py  stammbaum.py  viz.py
tests/: candel.html  juniper.html  karman.html  liepmann.html  marble.html  prandtl.html  test_djinn.py  test_graph.py  test_parse.py  test_scrape.py  test_viz.py
