[project]
name = "math-genealogy"
version = "0.2.0"
description = "MathDjinn."
authors = [
    {name = "Hans Yu",email = "hans.yu@outlook.de"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "networkx (>=3.5,<4.0)",
    "requests (>=2.32.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.4"
coverage = "^7.10.6"
pytest = "^8.4.2"
types-lxml = "^2025.8.25"

